# Project-repository

./: CMakeLists.txt  Engine.cpp  Engine.hpp  EntityManager.cpp  EntityManager.hpp  GameMenu.cpp  GameMenu.hpp  IDManager.cpp  IDManager.hpp  SpawnEntity.cpp  SpawnEntity.hpp  main.cpp
Components/: BoundsComponent.cpp  BoundsComponent.hpp  CollisionComponent.cpp  CollisionComponent.hpp  DescriptionComponent.cpp  DescriptionComponent.hpp  InputComponent.cpp  InputComponent.h  InputComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
ECS/: Entity.cpp  Entity.hpp  System.cpp  System.hpp
Entities/: EmptyObjectEntity.cpp  EmptyObjectEntity.hpp  InteractiveObjectEntity.cpp  InteractiveObjectEntity.hpp  InventoryEntity.cpp  InventoryEntity.hpp  LocationObject.cpp  LocationObject.hpp  LocationObjectEntity.cpp  LocationObjectEntity.hpp  ObjectEntity.cpp  ObjectEntity.hpp  PlayerEntity.cpp  PlayerEntity.hpp  StaticObjectEntity.cpp  StaticObjectEntity.hpp
Object/: tempObject.cpp  tempObject.hpp
Player/: Player.cpp  Player.h  Player.hpp
System/: CollisionSystem.hpp
Systems/: CollisionSystem.cpp  CollisionSystem.hpp  InputSystem.cpp  InputSystem.hpp  InteractionSystem.cpp  InteractionSystem.hpp  InventorySystem.cpp  InventorySystem.hpp  MoveSystem.cpp  MoveSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ScriptSystem.cpp  ScriptSystem.hpp
